--- a/src/functions/_reset.scss
+++ b/src/functions/_reset.scss
@@ -23,6 +23,9 @@
         margin: 0,
         padding: 0
       ),
+      'link': (
+        text-decoration: none
+      ),
       'spacing': (
         margin: 0,
         padding: 0
